--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# flask
+/flask-server/__pycache__
+
 # dependencies
 /react-app/node_modules
 /react-app/.pnp
