--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # flask
-/flask-server/__pycache__
+flask-server/__pycache__
 
 # dependencies
-/react-app/node_modules
-/react-app/.pnp
+react-app/node_modules
+react-app/.pnp
 react-app/.pnp.js
 
 # testing
-/react-app/coverage
+react-app/coverage
 
 # production
-/react-app/build
+react-app/build
 
 # misc
 react-app/.DS_Store
