--- a/react-app/package.json
+++ b/react-app/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.11.49",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "bootstrap": "^5.2.0",
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1",
     "react-scripts": "^5.0.1",
