--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ flask-server/__pycache__
 react-app/node_modules
 react-app/.pnp
 react-app/.pnp.js
+react-app/.idea
 
 # testing
 react-app/coverage
